--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student academic records</title>
-    <link rel="stylesheet" href="style.css" />
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Student academic records managment system</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="logo">Student academic records</div>
+<ul class="sidenav">
+  <li><a href="#home" >Home</a></li>
+  <li><a href="#Dashboard">Dashboard</a></li>
+  <li><a href="#Department">Department</a>
+  <ul>
+    <li><a href="#Add Department">Add Department</a></li>
+    <li><a href="#Veiw Department">Veiw Department</a></li>
+    </ul>
+  </li>
+  <li><a href="#Subject">Subject</a>
+  <ul>
+    <li><a href="#Add Subject">Add subject</a></li>
+    <li><a href="#Veiw Subject">Veiw Subject</a></li>
+  </ul>
+  </li>
+  <li><a href="#Result">Result</a></li>
+  <li><a href="#Students">Student</a></li>
+  <li><a href="#Timetable">Timetable</a></li>
+  <li><a href="#About us">About us</a></li>
+ </ul>
 
-  </head>
+<div class="content">
+  <h2>Student Academic Records Management System</h2>
+  
+</div>
 
-  <body>
-    <header>
-       <nav>
-        <div class="logo">
-            Student Academic Records
-        </div>
-        <div class="menu">
-            <a href="#Home">Home</a>
-            <a href="#Department">Department</a>
-            <a href="#Subject">Subject</a>
-            <a href="#Result">Result</a>
-            <a href="#Time table">Time Table</a>
-            <a href="#About">About</a>
-        </div>
-        <div class="register">
-            <a href="#Register">Register</a>
-        </div>
-       </nav>
-    
-    <section class="text">
-        <h1>Student Academic Records managment System</h1>
-        
-    </section>
-</header>
-  </body>
+</body>
 </html>
+
+
